--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	</head>
 	<body class="is-preload">
 
@@ -78,9 +77,9 @@
 									<ul class="feature-icons">
 										<li class="fa-html5">HTML</li>
 										<li class="fa-css3">CSS</li>
-										<li class="fa-js">JS</li>
-										<li class="fa-react">React js</li>
-										<li class="fa-book">Django</li>
+										<li class="fa-book">JS</li>
+										<li class="fa-coffee">React js</li>
+										<li class="fa-bolt">Django</li>
 										<li class="fa-users"><sup>+</sup> More coming</li>
 									</ul>
 								</div>
